; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_log_char.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_log_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32* null, align 8
@log_file = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8)* @log_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_char(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = load i32*, i32** @stdout, align 8
  %5 = call i32 @fputc(i8 signext %3, i32* %4)
  %6 = load i32*, i32** @log_file, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i8, i8* %2, align 1
  %10 = load i32*, i32** @log_file, align 8
  %11 = call i32 @fputc(i8 signext %9, i32* %10)
  br label %12

12:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @fputc(i8 signext, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
